# src/routes/resourceRoutes.js
@@ -2,10 +2,10 @@ const express = require('express');
 const router = express.Router();
 const resourceController = require('../controllers/resourceController');
 
-router.get('/', resourceController.getAll);
-router.get('/:uuid', resourceController.getById);
-router.post('/', resourceController.create);
-router.put('/:uuid', resourceController.update);
-router.delete('/:uuid', resourceController.delete);
+router.get('/', resourceController.getAllResources);
+router.get('/:id', resourceController.getResourceById);
+router.post('/', resourceController.createResource);
+router.put('/:id', resourceController.updateResource);
+router.delete('/:id', resourceController.deleteResource);
 
 module.exports = router;
