# src/routes/userRoutes.js
@@ -2,10 +2,10 @@ const express = require("express");
 const router = express.Router();
 const userController = require("../controllers/userController");
 
-router.get("/", userController.getAll);
-router.get("/:uuid", userController.getById);
-router.post("/", userController.create);
-router.put("/:uuid", userController.update);
-router.delete("/:uuid", userController.delete);
+router.get("/", userController.getAllUsers);
+router.get("/:id", userController.getUserById);
+router.post("/", userController.createUser);
+router.put("/:id", userController.updateUser);
+router.delete("/:id", userController.deleteUser);
 
 module.exports = router;
